added basic score to background

--- a/styling/stylesheets/styles.css
+++ b/styling/stylesheets/styles.css
@@ -1,3 +1,11 @@
 body {
-  background-image: url('../images/background.png')
+  display: flex;
+  background-image: url('../images/background.png');
+  align-items: center;
+}
+
+#score {
+  margin: 5em;
+  font-size: 30px;
+  color: white;
 }
